# Flatbuffers-Mutator

./: .gitmodules  CMakeLists.txt  README.md  README_michael.txt  TestSchema.fbs  TestSchema_generated.h  flatMutator.cc
Test_Example/: hello_world.cpp  hello_world.fbs  hello_world_generated.h
afl_example/: simple_target  simple_target_bug.c
afl_example/output_directory/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
afl_example/output_directory/default/queue/: id:000001,time:0,execs:0,orig:test_case2
flatbuffer_example/: README.txt  example_output
seed_inputs/: seed2.json
src/: CMakeCache.txt  CMakeLists.txt  Makefile  afl_mutator.h  cmake_install.cmake  flatMutator.cc  main.cpp
src/mutator/: BaseTypeMutator.cpp  BaseTypeMutator.h  BasicTest.cpp  CMakeLists.txt  ReadFlatbufferVals.cpp  TestOverflow.cpp  bug-crash.cpp  buggy  create_flatbuff  create_flatbuff.cpp  example.cpp  harn  harness  harness.cpp  harness_fuzzed  message.fbs  message_generated.h  mutator  mutator.cpp  seed_gen  seed_gen.cpp  seed_gen_v2.cpp  sgv2  test.cpp  testMutator.cpp  test_generated.h  test_overflow.cpp  test_seg_fault.cpp
src/mutator/buildHarness/: CMakeCache.txt  FlatBufferHarness  Makefile  cmake_install.cmake  debug.txt  debugTest.txt
src/mutator/buildHarness/output/default/: fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
src/mutator/buildHarness/output/default/crashes/: README.txt  id:000000,sig:06,src:000000,time:124,execs:105,op:libFlatBufferMutator.,pos:0  id:000000,sig:06,src:000000,time:3281,execs:2949,op:libFlatBufferMutator.,pos:0
src/mutator/buildHarness/seed/: buggy_seed.bfbs
src/mutator/output/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
src/mutator/output/default/crashes/: README.txt
src/mutator/output/default/queue/: id:000001,time:0,execs:0,orig:initial_test.fb  id:000002,time:0,execs:0,orig:cmdline  id:000008,time:0,execs:0,orig:valid_seed.fb
src/mutator/seed/: corrupted_message.fb  seed_basic.fb
src/mutator/seed/output/default/: fuzzer_setup
